Document PPDG/src/objects/Deployment_Plan__c.object
<CustomObject>
    <description>For use with IT &amp; Change Delivery deployments</description>
    <fields>
        <fullName>Apex_Classes__c</fullName>
        <description>List apex classes to be deployed</description>
        <inlineHelpText>List apex classes to be deployed</inlineHelpText>
        <label>Apex Classes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Business_Communications_Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Communications Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deployment_Plans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Communications_Completed_Date__c</fullName>
        <label>Business Communications Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Communications_Details__c</fullName>
        <label>Business Communications Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Buttons_and_Links__c</fullName>
        <description>New buttons and links to be created in Production</description>
        <inlineHelpText>New buttons and links to be created in Production</inlineHelpText>
        <label>Buttons and Links</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Custom_Settings__c</fullName>
        <description>Customer setting updated/created in Production</description>
        <inlineHelpText>Customer setting updated/created in Production</inlineHelpText>
        <label>Custom Settings</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Deployment_Completed_Date__c</fullName>
        <label>Deployment Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deployment_Details__c</fullName>
        <label>Deployment Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Deployment_Review_Meeting__c</fullName>
        <description>Date deployment review meeting scheduled</description>
        <inlineHelpText>Date deployment review meeting scheduled</inlineHelpText>
        <label>Deployment Review Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Docugen_Settings_Templates_Queries__c</fullName>
        <description>Docugen settings, templates and queries updated in Production</description>
        <inlineHelpText>Docugen settings, templates and queries updated in Production</inlineHelpText>
        <label>Docugen Settings/Templates/Queries</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Errors__c</fullName>
        <label>Errors</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IT_Change_Request_CAT_Case_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IT Change Request/CAT Case Link</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Deployment Plans</relationshipLabel>
        <relationshipName>Deployment_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IT_Change_Task_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IT &amp; Change Task Link</label>
        <referenceTo>IT_Change_Task__c</referenceTo>
        <relationshipLabel>Deployment Plans</relationshipLabel>
        <relationshipName>Deployment_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Fields__c</fullName>
        <description>All new fields created in Production</description>
        <inlineHelpText>All new fields created in Production</inlineHelpText>
        <label>New Fields</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>New_Permissions_To_Be_Given__c</fullName>
        <inlineHelpText>Permissions given for access required</inlineHelpText>
        <label>New Permissions To Be Given</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Objects__c</fullName>
        <inlineHelpText>List of all new objects to be created in live system</inlineHelpText>
        <label>Objects</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Page_Layouts__c</fullName>
        <description>Page Layouts checked and updated</description>
        <inlineHelpText>Page Layouts checked and updated</inlineHelpText>
        <label>Page Layouts</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PoPost_Implementation_Testing_Comp_Date__c</fullName>
        <label>Post Implementation Testing Comp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Post_Implementation_Testing_Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Post Implementation Testing Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deployment_Plans2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Post_Implementation_Testing_Details__c</fullName>
        <label>Post Implementation Testing Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Review_Meeting_Members__c</fullName>
        <description>List of members attended the review meeting</description>
        <inlineHelpText>List of members attended the review meeting</inlineHelpText>
        <label>Review Meeting Members</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Static_resources__c</fullName>
        <inlineHelpText>Static Resources updated</inlineHelpText>
        <label>Static resources</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Testing_Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Testing Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deployment_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Testing_Completed_Date__c</fullName>
        <label>Testing Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Testing_Details__c</fullName>
        <label>Testing Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Triggers__c</fullName>
        <description>List all Triggers to be deployed</description>
        <inlineHelpText>List all Triggers to be deployed</inlineHelpText>
        <label>Triggers</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>VF_Pages__c</fullName>
        <description>List all VF pages to be deployed</description>
        <inlineHelpText>List all VF pages to be deployed</inlineHelpText>
        <label>VF Pages</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Visual_Force_Components__c</fullName>
        <description>Visual force components to be deployed</description>
        <inlineHelpText>Visual force components to be deployed</inlineHelpText>
        <label>Visual Force Components</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Workflow_Rules__c</fullName>
        <description>New workflow rules created</description>
        <inlineHelpText>New workflow rules created</inlineHelpText>
        <label>Workflow Rules</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Deployment Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Deployment Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deployment Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>